iio: potentiometer: max5481: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12996,6 +12996,7 @@
 	patches.suse/iio-gyro-fxas210002c-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-imu-fxos8700-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-potentiometer-ad5272-Fix-alignment-for-DMA-safet.patch
+	patches.suse/iio-potentiometer-max5481-Fix-alignment-for-DMA-safe.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
