HID: amd_sfh: Add NULL check for hid device (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13012,6 +13012,7 @@
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
+	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
