--- a/series.conf
+++ b/series.conf
@@ -12961,6 +12961,7 @@
 	patches.suse/iio-adc-ti-adc12138-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-adc128s052-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-adc161s626-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ti-ads124s08-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
