--- a/series.conf
+++ b/series.conf
@@ -12935,6 +12935,7 @@
 	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
 	patches.suse/intel_th-msu-Fix-vmalloced-buffers.patch
 	patches.suse/iio-accel-bma400-Fix-the-scale-min-and-max-macro-val.patch
+	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
