misc: rtsx: Fix an error handling path in rtsx_pci_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12930,6 +12930,7 @@
 	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
+	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
