--- a/series.conf
+++ b/series.conf
@@ -13000,6 +13000,7 @@
 	patches.suse/iio-potentiometer-mcp41010-Fix-alignment-for-DMA-saf.patch
 	patches.suse/iio-potentiometer-mcp4131-Fix-alignment-for-DMA-safe.patch
 	patches.suse/iio-proximity-as3935-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-resolver-ad2s1200-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
