iio: adc: ltc2496: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12948,6 +12948,7 @@
 	patches.suse/iio-adc-ad7887-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7923-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-hi8435-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ltc2496-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
