--- a/series.conf
+++ b/series.conf
@@ -12956,6 +12956,7 @@
 	patches.suse/iio-adc-max1241-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-mcp320x-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-adc0832-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ti-adc084s021-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
