--- a/series.conf
+++ b/series.conf
@@ -12971,6 +12971,7 @@
 	patches.suse/iio-common-ssp-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5064-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5360-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ad5421-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
