--- a/series.conf
+++ b/series.conf
@@ -13004,6 +13004,7 @@
 	patches.suse/iio-resolver-ad2s90-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-temp-ltc2983-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-temp-maxim_thermocouple-Fix-alignment-for-DMA-sa.patch
+	patches.suse/eeprom-idt_89hpesx-uninitialized-data-in-idt_dbgfs_c.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
