--- a/series.conf
+++ b/series.conf
@@ -12983,6 +12983,7 @@
 	patches.suse/iio-dac-ad7303-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad8801-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-mcp4922-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ti-dac082s085-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
