--- a/series.conf
+++ b/series.conf
@@ -13036,6 +13036,7 @@
 	patches.suse/dmaengine-stm32-mdma-Remove-dead-code-in-stm32_mdma_.patch
 	patches.suse/dmaengine-sf-pdma-Add-multithread-support-for-a-DMA-.patch
 	patches.suse/dmaengine-imx-dma-Cast-of_device_get_match_data-with.patch
+	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
