--- a/series.conf
+++ b/series.conf
@@ -13038,6 +13038,7 @@
 	patches.suse/dmaengine-imx-dma-Cast-of_device_get_match_data-with.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
+	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
