--- a/series.conf
+++ b/series.conf
@@ -12980,6 +12980,7 @@
 	patches.suse/iio-dac-ad5766-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5770r-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5791-Fix-alignment-for-DMA-saftey.patch
+	patches.suse/iio-dac-ad7303-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
