--- a/series.conf
+++ b/series.conf
@@ -12975,6 +12975,7 @@
 	patches.suse/iio-dac-ad5449-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5504-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ad5755-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ad5761-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
