--- a/series.conf
+++ b/series.conf
@@ -12943,6 +12943,7 @@
 	patches.suse/iio-adc-ad7292-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7298-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7476-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ad7766-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
