--- a/series.conf
+++ b/series.conf
@@ -13007,6 +13007,7 @@
 	patches.suse/eeprom-idt_89hpesx-uninitialized-data-in-idt_dbgfs_c.patch
 	patches.suse/interconnect-imx-fix-max_node_id.patch
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
+	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
