--- a/series.conf
+++ b/series.conf
@@ -12986,6 +12986,7 @@
 	patches.suse/iio-dac-ti-dac082s085-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ti-dac5571-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-dac-ti-dac7311-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ti-dac7612-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
