iio: amplifiers: ad8366: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12967,6 +12967,7 @@
 	patches.suse/iio-adc-ti-ads8344-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-ads8688-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-tlc4541-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-amplifiers-ad8366-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
