memstick/ms_block: Fix some incorrect memory allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13040,6 +13040,7 @@
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
+	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
