--- a/series.conf
+++ b/series.conf
@@ -13058,6 +13058,7 @@
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
+	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
