--- a/series.conf
+++ b/series.conf
@@ -13043,6 +13043,7 @@
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
+	patches.suse/PCI-dwc-Set-INCREASE_REGION_SIZE-flag-based-on-limit.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
