PCI: microchip: Fix refcount leak in mc_pcie_init_irq_domains() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13047,6 +13047,7 @@
 	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
 	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
+	patches.suse/PCI-microchip-Fix-refcount-leak-in-mc_pcie_init_irq_.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
