--- a/series.conf
+++ b/series.conf
@@ -13038,6 +13038,7 @@
 	patches.suse/dmaengine-sf-pdma-Add-multithread-support-for-a-DMA-.patch
 	patches.suse/dmaengine-imx-dma-Cast-of_device_get_match_data-with.patch
 	patches.suse/PCI-endpoint-Don-t-stop-controller-when-unbinding-en.patch
+	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
