--- a/series.conf
+++ b/series.conf
@@ -13044,6 +13044,7 @@
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
 	patches.suse/PCI-dwc-Set-INCREASE_REGION_SIZE-flag-based-on-limit.patch
+	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
