PCI: dwc: Always enable CDM check if "snps,enable-cdm-check" exists (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13045,6 +13045,7 @@
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
 	patches.suse/PCI-dwc-Set-INCREASE_REGION_SIZE-flag-based-on-limit.patch
 	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
+	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
