--- a/series.conf
+++ b/series.conf
@@ -13059,6 +13059,7 @@
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
 	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
+	patches.suse/mmc-block-Add-single-read-for-4k-sector-cards.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
