phy: stm32: fix error return in stm32_usbphyc_phy_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13006,6 +13006,7 @@
 	patches.suse/iio-temp-maxim_thermocouple-Fix-alignment-for-DMA-sa.patch
 	patches.suse/eeprom-idt_89hpesx-uninitialized-data-in-idt_dbgfs_c.patch
 	patches.suse/interconnect-imx-fix-max_node_id.patch
+	patches.suse/phy-stm32-fix-error-return-in-stm32_usbphyc_phy_init.patch
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
