--- a/series.conf
+++ b/series.conf
@@ -13052,6 +13052,7 @@
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
 	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
 	patches.suse/PCI-tegra194-Fix-Root-Port-interrupt-handling.patch
+	patches.suse/PCI-tegra194-Fix-link-up-retry-sequence.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
