--- a/series.conf
+++ b/series.conf
@@ -13061,6 +13061,7 @@
 	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
 	patches.suse/mmc-block-Add-single-read-for-4k-sector-cards.patch
 	patches.suse/mmc-cavium-octeon-Add-of_node_put-when-breaking-out-.patch
+	patches.suse/mmc-cavium-thunderx-Add-of_node_put-when-breaking-ou.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
