--- a/series.conf
+++ b/series.conf
@@ -13005,6 +13005,7 @@
 	patches.suse/iio-temp-ltc2983-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-temp-maxim_thermocouple-Fix-alignment-for-DMA-sa.patch
 	patches.suse/eeprom-idt_89hpesx-uninitialized-data-in-idt_dbgfs_c.patch
+	patches.suse/soundwire-bus_type-fix-remove-and-shutdown-support.patch
 	patches.suse/interconnect-imx-fix-max_node_id.patch
 	patches.suse/phy-stm32-fix-error-return-in-stm32_usbphyc_phy_init.patch
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
