usb: gadget: udc: amd5536 depends on HAS_DMA (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13020,6 +13020,7 @@
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/usb-dwc3-gadget-refactor-dwc3_repare_one_trb.patch
 	patches.suse/usb-dwc3-gadget-fix-high-speed-multiplier-setting.patch
+	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
