--- a/series.conf
+++ b/series.conf
@@ -13017,6 +13017,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Fix-error-check-in-tegra_xudc_.patch
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
+	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
