usb: host: Fix refcount leak in ehci_hcd_ppc_of_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13012,6 +13012,7 @@
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
+	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
