--- a/series.conf
+++ b/series.conf
@@ -13028,6 +13028,7 @@
 	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
+	patches.suse/USB-Follow-up-to-SPDX-GPL-2.0-identifiers-addition-r.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
