usb: dwc3: qcom: fix missing optional irq warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13022,6 +13022,7 @@
 	patches.suse/usb-dwc3-gadget-fix-high-speed-multiplier-setting.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
 	patches.suse/usb-aspeed-vhub-Fix-refcount-leak-bug-in-ast_vhub_in.patch
+	patches.suse/usb-dwc3-qcom-fix-missing-optional-irq-warnings.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
