--- a/series.conf
+++ b/series.conf
@@ -13025,6 +13025,7 @@
 	patches.suse/usb-dwc3-qcom-fix-missing-optional-irq-warnings.patch
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-cdns3-change-place-of-priv_ep-assignment-in-cdns.patch
+	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
