platform/chrome: cros_ec: Always expose last resume result (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13034,6 +13034,7 @@
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
 	patches.suse/HID-amd_sfh-Add-NULL-check-for-hid-device.patch
 	patches.suse/HID-amd_sfh-Handle-condition-of-no-sensors.patch
+	patches.suse/platform-chrome-cros_ec-Always-expose-last-resume-re.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
