--- a/series.conf
+++ b/series.conf
@@ -13015,6 +13015,7 @@
 	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
 	patches.suse/usb-gadget-tegra-xudc-Fix-error-check-in-tegra_xudc_.patch
+	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/HID-mcp2221-prevent-a-buffer-overflow-in-mcp_smbus_w.patch
