usb: cdns3: Don't use priv_dev uninitialized in cdns3_gadget_ep_enable() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13026,6 +13026,7 @@
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-cdns3-change-place-of-priv_ep-assignment-in-cdns.patch
 	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
+	patches.suse/usb-cdns3-Don-t-use-priv_dev-uninitialized-in-cdns3_.patch
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
 	patches.suse/USB-Follow-up-to-SPDX-GPL-2.0-identifiers-addition-r.patch
