--- a/series.conf
+++ b/series.conf
@@ -5635,6 +5635,7 @@
 	patches.suse/iwlwifi-mvm-Remove-antenna-c-references.patch
 	patches.suse/iwlwifi-add-some-missing-kernel-doc-in-struct-iwl_fw.patch
 	patches.suse/iwlwifi-api-remove-unused-RX-status-bits.patch
+	patches.suse/iwlwifi-remove-MODULE_AUTHOR-statements.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
