wireless: Remove redundant 'flush_workqueue()' calls (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5476,6 +5476,7 @@
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
 	patches.suse/rtw89-add-Realtek-802.11ax-driver.patch
+	patches.suse/wireless-Remove-redundant-flush_workqueue-calls.patch
 	patches.suse/mwifiex-Read-a-PCI-register-after-writing-the-TX-rin.patch
 	patches.suse/mwifiex-Try-waking-the-firmware-until-we-get-an-inte.patch
 	patches.suse/rtw89-Fix-two-spelling-mistakes-in-debug-messages.patch
