--- a/series.conf
+++ b/series.conf
@@ -5631,6 +5631,7 @@
 	patches.suse/iwlwifi-mvm-disable-RX-diversity-in-powersave.patch
 	patches.suse/iwlwifi-mvm-add-lmac-umac-PC-info-in-case-of-error.patch
 	patches.suse/iwlwifi-add-vendor-specific-capabilities-for-some-RF.patch
+	patches.suse/iwlwifi-mvm-add-support-for-160Mhz-in-ranging-measur.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
