iwlwifi: add some missing kernel-doc in struct iwl_fw (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5633,6 +5633,7 @@
 	patches.suse/iwlwifi-add-vendor-specific-capabilities-for-some-RF.patch
 	patches.suse/iwlwifi-mvm-add-support-for-160Mhz-in-ranging-measur.patch
 	patches.suse/iwlwifi-mvm-Remove-antenna-c-references.patch
+	patches.suse/iwlwifi-add-some-missing-kernel-doc-in-struct-iwl_fw.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
