iwlwifi: mvm: add lmac/umac PC info in case of error (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5629,6 +5629,7 @@
 	patches.suse/iwlwifi-Start-scratch-debug-register-for-Bz-family.patch
 	patches.suse/iwlwifi-mvm-fix-ieee80211_get_he_iftype_cap-iftype.patch
 	patches.suse/iwlwifi-mvm-disable-RX-diversity-in-powersave.patch
+	patches.suse/iwlwifi-mvm-add-lmac-umac-PC-info-in-case-of-error.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
