--- a/series.conf
+++ b/series.conf
@@ -5625,6 +5625,7 @@
 	patches.suse/ice-fix-error-return-code-in-ice_get_recp_frm_fw.patch
 	patches.suse/ifb-fix-building-without-CONFIG_NET_CLS_ACT.patch
 	patches.suse/iwlwifi-Add-support-for-getting-rf-id-with-blank-otp.patch
+	patches.suse/iwlwifi-Add-support-for-more-BZ-HWs.patch
 	patches.suse/iwlwifi-mvm-disable-RX-diversity-in-powersave.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
