--- a/series.conf
+++ b/series.conf
@@ -5641,6 +5641,7 @@
 	patches.suse/iwlwifi-api-fix-struct-iwl_wowlan_status_v7-kernel-d.patch
 	patches.suse/iwlwifi-mvm-correct-sta-state-logic-for-TDLS.patch
 	patches.suse/iwlwifi-fw-dump-add-infrastructure-for-dump-scrubbin.patch
+	patches.suse/iwlwifi-parse-debug-exclude-data-from-firmware-file.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
