iwlwifi: mvm: fix ieee80211_get_he_iftype_cap() iftype (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5627,6 +5627,7 @@
 	patches.suse/iwlwifi-Add-support-for-getting-rf-id-with-blank-otp.patch
 	patches.suse/iwlwifi-Add-support-for-more-BZ-HWs.patch
 	patches.suse/iwlwifi-Start-scratch-debug-register-for-Bz-family.patch
+	patches.suse/iwlwifi-mvm-fix-ieee80211_get_he_iftype_cap-iftype.patch
 	patches.suse/iwlwifi-mvm-disable-RX-diversity-in-powersave.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
