--- a/series.conf
+++ b/series.conf
@@ -5638,6 +5638,7 @@
 	patches.suse/iwlwifi-remove-MODULE_AUTHOR-statements.patch
 	patches.suse/iwlwifi-remove-contact-information.patch
 	patches.suse/iwlwifi-fix-fw-img.c-license-statement.patch
+	patches.suse/iwlwifi-api-fix-struct-iwl_wowlan_status_v7-kernel-d.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
