iwlwifi: mvm: Support version 3 of tlc_update_notif (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5646,6 +5646,7 @@
 	patches.suse/iwlwifi-mvm-update-definitions-due-to-new-rate-flags.patch
 	patches.suse/iwlwifi-mvm-add-definitions-for-new-rate-flags.patch
 	patches.suse/iwlwifi-mvm-convert-old-rate-flags-to-the-new-format.patch
+	patches.suse/iwlwifi-mvm-Support-version-3-of-tlc_update_notif.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
