--- a/series.conf
+++ b/series.conf
@@ -5644,6 +5644,7 @@
 	patches.suse/iwlwifi-parse-debug-exclude-data-from-firmware-file.patch
 	patches.suse/iwlwifi-mvm-scrub-key-material-in-firmware-dumps.patch
 	patches.suse/iwlwifi-mvm-update-definitions-due-to-new-rate-flags.patch
+	patches.suse/iwlwifi-mvm-add-definitions-for-new-rate-flags.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
