--- a/series.conf
+++ b/series.conf
@@ -5648,6 +5648,7 @@
 	patches.suse/iwlwifi-mvm-convert-old-rate-flags-to-the-new-format.patch
 	patches.suse/iwlwifi-mvm-Support-version-3-of-tlc_update_notif.patch
 	patches.suse/iwlwifi-mvm-Support-new-version-of-ranging-response-.patch
+	patches.suse/iwlwifi-yoyo-fw-debug-config-from-context-info-and-p.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
