- iwlwifi: mvm: Add support for new rate_n_flags in tx_cmd   (bsc#1202131). - Refresh   patches.suse/iwlwifi-mvm-don-t-crash-on-invalid-rate-w-o-STA.patch.

--- a/series.conf
+++ b/series.conf
@@ -5651,6 +5651,7 @@
 	patches.suse/iwlwifi-yoyo-fw-debug-config-from-context-info-and-p.patch
 	patches.suse/iwlwifi-BZ-Family-BUS_MASTER_DISABLE_REQ-code-duplic.patch
 	patches.suse/iwlwifi-BZ-Family-SW-reset-support.patch
+	patches.suse/iwlwifi-mvm-Add-support-for-new-rate_n_flags-in-tx_c.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
