iwlwifi: mvm: remove session protection after auth/assoc (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5658,6 +5658,7 @@
 	patches.suse/iwlwifi-mvm-remove-csi-from-iwl_mvm_pass_packet_to_m.patch
 	patches.suse/iwlwifi-mvm-Add-RTS-and-CTS-flags-to-iwl_tx_cmd_flag.patch
 	patches.suse/iwlwifi-remove-redundant-iwl_finish_nic_init-argumen.patch
+	patches.suse/iwlwifi-mvm-remove-session-protection-after-auth-ass.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
