--- a/series.conf
+++ b/series.conf
@@ -5661,6 +5661,7 @@
 	patches.suse/iwlwifi-mvm-remove-session-protection-after-auth-ass.patch
 	patches.suse/iwlwifi-allow-rate-limited-error-messages.patch
 	patches.suse/iwlwifi-mvm-reduce-WARN_ON-in-TX-status-path.patch
+	patches.suse/iwlwifi-pcie-try-to-grab-NIC-access-early.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
