iwlwifi: mvm: reduce WARN_ON() in TX status path (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5660,6 +5660,7 @@
 	patches.suse/iwlwifi-remove-redundant-iwl_finish_nic_init-argumen.patch
 	patches.suse/iwlwifi-mvm-remove-session-protection-after-auth-ass.patch
 	patches.suse/iwlwifi-allow-rate-limited-error-messages.patch
+	patches.suse/iwlwifi-mvm-reduce-WARN_ON-in-TX-status-path.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
