--- a/series.conf
+++ b/series.conf
@@ -5656,6 +5656,7 @@
 	patches.suse/iwlwifi-mvm-Support-new-TX_RSP-and-COMPRESSED_BA_RES.patch
 	patches.suse/iwlwifi-mvm-Support-new-rate_n_flags-for-REPLY_RX_MP.patch
 	patches.suse/iwlwifi-mvm-remove-csi-from-iwl_mvm_pass_packet_to_m.patch
+	patches.suse/iwlwifi-mvm-Add-RTS-and-CTS-flags-to-iwl_tx_cmd_flag.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
