--- a/series.conf
+++ b/series.conf
@@ -5668,6 +5668,7 @@
 	patches.suse/iwlwifi-mvm-set-BT-coex-high-priority-for-802.1X-4-w.patch
 	patches.suse/iwlwifi-mvm-improve-log-when-processing-CSA.patch
 	patches.suse/iwlwifi-add-new-device-id-7F70.patch
+	patches.suse/iwlwifi-mvm-Read-acpi-dsm-to-get-channel-activation-.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
