--- a/series.conf
+++ b/series.conf
@@ -5666,6 +5666,7 @@
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
 	patches.suse/iwlwifi-dbg-treat-dbgc-allocation-failure-when-tlv-i.patch
 	patches.suse/iwlwifi-mvm-set-BT-coex-high-priority-for-802.1X-4-w.patch
+	patches.suse/iwlwifi-mvm-improve-log-when-processing-CSA.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
