--- a/series.conf
+++ b/series.conf
@@ -5664,6 +5664,7 @@
 	patches.suse/iwlwifi-pcie-try-to-grab-NIC-access-early.patch
 	patches.suse/iwlwifi-mvm-set-inactivity-timeouts-also-for-PS-poll.patch
 	patches.suse/iwlwifi-add-new-killer-devices-to-the-driver.patch
+	patches.suse/iwlwifi-dbg-treat-dbgc-allocation-failure-when-tlv-i.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
