--- a/series.conf
+++ b/series.conf
@@ -5669,6 +5669,7 @@
 	patches.suse/iwlwifi-mvm-improve-log-when-processing-CSA.patch
 	patches.suse/iwlwifi-add-new-device-id-7F70.patch
 	patches.suse/iwlwifi-mvm-Read-acpi-dsm-to-get-channel-activation-.patch
+	patches.suse/iwlwifi-dbg-treat-non-active-regions-as-unsupported-.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
