iwlwifi: pnvm: print out the version properly (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5670,6 +5670,7 @@
 	patches.suse/iwlwifi-add-new-device-id-7F70.patch
 	patches.suse/iwlwifi-mvm-Read-acpi-dsm-to-get-channel-activation-.patch
 	patches.suse/iwlwifi-dbg-treat-non-active-regions-as-unsupported-.patch
+	patches.suse/iwlwifi-pnvm-print-out-the-version-properly.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
