--- a/series.conf
+++ b/series.conf
@@ -5698,6 +5698,7 @@
 	patches.suse/mwifiex-fix-division-by-zero-in-fw-download-path.patch
 	patches.suse/iwlwifi-mvm-fix-some-kerneldoc-issues.patch
 	patches.suse/iwlwifi-pcie-fix-killer-name-matching-for-AX200.patch
+	patches.suse/iwlwifi-pcie-remove-duplicate-entry.patch
 	patches.suse/iwlwifi-fw-uefi-add-missing-include-guards.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
