- iwlwifi: add new device id 7F70 (bsc#1202131). - Refresh   patches.suse/iwlwifi-pcie-add-killer-devices-to-the-driver.patch.

--- a/series.conf
+++ b/series.conf
@@ -5667,6 +5667,7 @@
 	patches.suse/iwlwifi-dbg-treat-dbgc-allocation-failure-when-tlv-i.patch
 	patches.suse/iwlwifi-mvm-set-BT-coex-high-priority-for-802.1X-4-w.patch
 	patches.suse/iwlwifi-mvm-improve-log-when-processing-CSA.patch
+	patches.suse/iwlwifi-add-new-device-id-7F70.patch
 	patches.suse/libertas_tf-Fix-possible-memory-leak-in-probe-and-di.patch
 	patches.suse/libertas-Fix-possible-memory-leak-in-probe-and-disco.patch
 	patches.suse/rtw89-fix-error-function-parameter.patch
