--- a/series.conf
+++ b/series.conf
@@ -5702,6 +5702,7 @@
 	patches.suse/iwlwifi-pcie-refactor-dev_info-lookup.patch
 	patches.suse/iwlwifi-pcie-remove-two-duplicate-PNJ-device-entries.patch
 	patches.suse/iwlwifi-mvm-Use-all-Rx-chains-for-roaming-scan.patch
+	patches.suse/iwlwifi-add-new-pci-SoF-with-JF.patch
 	patches.suse/iwlwifi-fw-uefi-add-missing-include-guards.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
