iwlwifi: yoyo: support for ROM usniffer (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5708,6 +5708,7 @@
 	patches.suse/iwlwifi-pcie-simplify-iwl_pci_find_dev_info.patch
 	patches.suse/iwlwifi-dump-host-monitor-data-when-NIC-doesn-t-init.patch
 	patches.suse/iwlwifi-fw-uefi-add-missing-include-guards.patch
+	patches.suse/iwlwifi-yoyo-support-for-ROM-usniffer.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
