--- a/series.conf
+++ b/series.conf
@@ -5705,6 +5705,7 @@
 	patches.suse/iwlwifi-add-new-pci-SoF-with-JF.patch
 	patches.suse/iwlwifi-pcie-update-sw-error-interrupt-for-BZ-family.patch
 	patches.suse/iwlwifi-ACPI-support-revision-3-WGDS-tables.patch
+	patches.suse/iwlwifi-pcie-simplify-iwl_pci_find_dev_info.patch
 	patches.suse/iwlwifi-fw-uefi-add-missing-include-guards.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
