--- a/series.conf
+++ b/series.conf
@@ -5714,6 +5714,7 @@
 	patches.suse/iwlwifi-mvm-update-RFI-TLV.patch
 	patches.suse/iwlwifi-mvm-d3-use-internal-data-representation.patch
 	patches.suse/iwlwifi-rename-GEO_TX_POWER_LIMIT-to-PER_CHAIN_LIMIT.patch
+	patches.suse/iwlwifi-mvm-fix-WGDS-table-print-in-iwl_mvm_chub_upd.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
