--- a/series.conf
+++ b/series.conf
@@ -7387,6 +7387,7 @@
 	patches.suse/net-mlx5-Fix-access-to-a-non-supported-register.patch
 	patches.suse/net-mlx5e-SHAMPO-Fix-constant-expression-result.patch
 	patches.suse/iwlwifi-pcie-fix-constant-conversion-warning.patch
+	patches.suse/iwlwifi-Fix-missing-error-code-in-iwl_pci_probe.patch
 	patches.suse/iwlwifi-mvm-retry-init-flow-if-failed.patch
 	patches.suse/iwlwifi-fix-warnings-produced-by-kernel-debug-option.patch
 	patches.suse/iwlwifi-Fix-memory-leaks-in-error-handling-path.patch
