--- a/series.conf
+++ b/series.conf
@@ -5711,6 +5711,7 @@
 	patches.suse/iwlwifi-yoyo-support-for-ROM-usniffer.patch
 	patches.suse/iwlwifi-mvm-read-6E-enablement-flags-from-DSM-and-pa.patch
 	patches.suse/iwlwifi-mvm-don-t-get-address-of-mvm-fwrt-just-to-de.patch
+	patches.suse/iwlwifi-mvm-update-RFI-TLV.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
