--- a/series.conf
+++ b/series.conf
@@ -5717,6 +5717,7 @@
 	patches.suse/iwlwifi-mvm-fix-WGDS-table-print-in-iwl_mvm_chub_upd.patch
 	patches.suse/iwlwifi-mvm-remove-session-protection-on-disassoc.patch
 	patches.suse/iwlwifi-rename-CHANNEL_SWITCH_NOA_NOTIF-to-CHANNEL_S.patch
+	patches.suse/iwlwifi-mvm-extend-session-protection-on-association.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
