iwlwifi: mvm: don't get address of mvm->fwrt just to dereference as a pointer (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -5710,6 +5710,7 @@
 	patches.suse/iwlwifi-fw-uefi-add-missing-include-guards.patch
 	patches.suse/iwlwifi-yoyo-support-for-ROM-usniffer.patch
 	patches.suse/iwlwifi-mvm-read-6E-enablement-flags-from-DSM-and-pa.patch
+	patches.suse/iwlwifi-mvm-don-t-get-address-of-mvm-fwrt-just-to-de.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
