--- a/series.conf
+++ b/series.conf
@@ -5712,6 +5712,7 @@
 	patches.suse/iwlwifi-mvm-read-6E-enablement-flags-from-DSM-and-pa.patch
 	patches.suse/iwlwifi-mvm-don-t-get-address-of-mvm-fwrt-just-to-de.patch
 	patches.suse/iwlwifi-mvm-update-RFI-TLV.patch
+	patches.suse/iwlwifi-mvm-d3-use-internal-data-representation.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
