- iwlwifi: rename GEO_TX_POWER_LIMIT to PER_CHAIN_LIMIT_OFFSET_CMD   (bsc#1202131). - Refresh   patches.suse/iwlwifi-don-t-pass-actual-WGDS-revision-number-in-ta.patch.

--- a/series.conf
+++ b/series.conf
@@ -5713,6 +5713,7 @@
 	patches.suse/iwlwifi-mvm-don-t-get-address-of-mvm-fwrt-just-to-de.patch
 	patches.suse/iwlwifi-mvm-update-RFI-TLV.patch
 	patches.suse/iwlwifi-mvm-d3-use-internal-data-representation.patch
+	patches.suse/iwlwifi-rename-GEO_TX_POWER_LIMIT-to-PER_CHAIN_LIMIT.patch
 	patches.suse/intel-Simplify-bool-conversion.patch
 	patches.suse/igb-unbreak-I2C-bit-banging-on-i350.patch
 	patches.suse/net-ixgbevf-Remove-redundant-initialization-of-varia.patch
