--- a/series.conf
+++ b/series.conf
@@ -10506,6 +10506,7 @@
 	patches.suse/iwlwifi-mvm-align-locking-in-D3-test-debugfs.patch
 	patches.suse/iwlwifi-yoyo-remove-DBGI_SRAM-address-reset-writing.patch
 	patches.suse/iwlwifi-mvm-Correctly-set-fragmented-EBS.patch
+	patches.suse/iwlwifi-yoyo-Avoid-using-dram-data-if-allocation-fai.patch
 	patches.suse/iwlwifi-mvm-move-only-to-an-enabled-channel.patch
 	patches.suse/iwlwifi-Fix-EIO-error-code-that-is-never-returned.patch
 	patches.suse/iwlwifi-mvm-Fix-an-error-code-in-iwl_mvm_up.patch
