--- a/series.conf
+++ b/series.conf
@@ -9529,6 +9529,7 @@
 	patches.suse/mac80211_hwsim-report-NOACK-frames-in-tx_status.patch
 	patches.suse/mac80211_hwsim-initialize-ieee80211_tx_info-at-hw_sc.patch
 	patches.suse/iwlwifi-mvm-fix-condition-which-checks-the-version-o.patch
+	patches.suse/iwlwifi-fix-iwl_legacy_rate_to_fw_idx.patch
 	patches.suse/iwlwifi-pcie-fix-locking-when-HW-not-ready.patch
 	patches.suse/iwlwifi-pcie-gen2-fix-locking-when-HW-not-ready.patch
 	patches.suse/iwlwifi-mvm-don-t-send-SAR-GEO-command-for-3160-devi.patch
