iwlwifi: remove deprecated broadcast filtering feature (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -9532,6 +9532,7 @@
 	patches.suse/iwlwifi-fix-iwl_legacy_rate_to_fw_idx.patch
 	patches.suse/iwlwifi-pcie-fix-locking-when-HW-not-ready.patch
 	patches.suse/iwlwifi-pcie-gen2-fix-locking-when-HW-not-ready.patch
+	patches.suse/iwlwifi-remove-deprecated-broadcast-filtering-featur.patch
 	patches.suse/iwlwifi-mvm-don-t-send-SAR-GEO-command-for-3160-devi.patch
 	patches.suse/cfg80211-fix-race-in-netlink-owner-interface-destruc.patch
 	patches.suse/iwlwifi-fix-use-after-free.patch
