iwlwifi: pcie: fix SW error MSI-X mapping (bsc#1202131).

--- a/series.conf
+++ b/series.conf
@@ -10517,6 +10517,7 @@
 	patches.suse/ath11k-mhi-use-mhi_sync_power_up.patch
 	patches.suse/wcn36xx-Differentiate-wcn3660-from-wcn3620.patch
 	patches.suse/carl9170-fix-missing-bit-wise-or-operator-for-tx_par.patch
+	patches.suse/iwlwifi-pcie-fix-SW-error-MSI-X-mapping.patch
 	patches.suse/Revert-ath-add-support-for-special-0x0-regulatory-do.patch
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
 	patches.suse/mac80211-fix-potential-double-free-on-mesh-join.patch
