--- a/series.conf
+++ b/series.conf
@@ -9528,6 +9528,7 @@
 	patches.suse/mac80211-mlme-check-for-null-after-calling-kmemdup.patch
 	patches.suse/mac80211_hwsim-report-NOACK-frames-in-tx_status.patch
 	patches.suse/mac80211_hwsim-initialize-ieee80211_tx_info-at-hw_sc.patch
+	patches.suse/iwlwifi-mvm-fix-condition-which-checks-the-version-o.patch
 	patches.suse/iwlwifi-pcie-fix-locking-when-HW-not-ready.patch
 	patches.suse/iwlwifi-pcie-gen2-fix-locking-when-HW-not-ready.patch
 	patches.suse/iwlwifi-mvm-don-t-send-SAR-GEO-command-for-3160-devi.patch
