clk: renesas: r9a06g032: Fix UART clkgrp bitsel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56396,6 +56396,7 @@
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
+	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
