iio: core: Fix IIO_ALIGN and rename as it was not sufficiently large (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56367,6 +56367,7 @@
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
+	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
