--- a/series.conf
+++ b/series.conf
@@ -56371,6 +56371,7 @@
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ad7266-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ad7298-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
