fpga: altera-pr-ip: fix unsigned comparison with less than zero (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56366,6 +56366,7 @@
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
 	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
+	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
