iio: adc: ti-adc084s021: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56383,6 +56383,7 @@
 	patches.suse/iio-adc-max1118-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-mcp320x-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-adc0832-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ti-adc084s021-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
