iio: adc: max11100: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56379,6 +56379,7 @@
 	patches.suse/iio-adc-hi8435-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ltc2497-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-max1027-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-max11100-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
