clk: qcom: ipq8074: fix NSS port frequency tables (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56400,6 +56400,7 @@
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-core-PLL-s.patch
 	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
+	patches.suse/clk-qcom-ipq8074-fix-NSS-port-frequency-tables.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
