iio: adc: ti-tlc4541: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56391,6 +56391,7 @@
 	patches.suse/iio-adc-ti-ads7950-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-ads8344-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-ads8688-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-ti-tlc4541-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
