clk: qcom: ipq8074: fix NSS core PLL-s (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56398,6 +56398,7 @@
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
+	patches.suse/clk-qcom-ipq8074-fix-NSS-core-PLL-s.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
