iio: accel: sca3000: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56369,6 +56369,7 @@
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
