iio: dac: ad5064: Fix alignment for DMA safety (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56393,6 +56393,7 @@
 	patches.suse/iio-adc-ti-ads8688-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-ti-tlc4541-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-amplifiers-ad8366-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-dac-ad5064-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
