PCI: dwc: Deallocate EPC memory on dw_pcie_ep_init() errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56453,6 +56453,7 @@
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
 	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
+	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
