intel_th: msu-sink: Potential dereference of null pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56369,6 +56369,7 @@
 	patches.suse/fpga-altera-pr-ip-fix-unsigned-comparison-with-less-.patch
 	patches.suse/misc-rtsx-Fix-an-error-handling-path-in-rtsx_pci_pro.patch
 	patches.suse/intel_th-Fix-a-resource-leak-in-an-error-handling-pa.patch
+	patches.suse/intel_th-msu-sink-Potential-dereference-of-null-poin.patch
 	patches.suse/iio-core-Fix-IIO_ALIGN-and-rename-as-it-was-not-suff.patch
 	patches.suse/iio-accel-bma220-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-accel-sca3000-Fix-alignment-for-DMA-safety.patch
