mmc: sdhci-of-esdhc: Fix refcount leak in esdhc_signal_voltage_switch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56460,6 +56460,7 @@
 	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
 	patches.suse/PCI-tegra194-Fix-Root-Port-interrupt-handling.patch
 	patches.suse/PCI-tegra194-Fix-link-up-retry-sequence.patch
+	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
