PCI: qcom: Power on PHY before IPQ8074 DBI register accesses (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56456,6 +56456,7 @@
 	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
 	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
+	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
