PCI: dwc: Add unroll iATU space support to dw_pcie_disable_atu() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56451,6 +56451,7 @@
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/PCI-portdrv-Don-t-disable-AER-reporting-in-get_port_.patch
 	patches.suse/PCI-dwc-Stop-link-on-host_init-errors-and-de-initial.patch
+	patches.suse/PCI-dwc-Add-unroll-iATU-space-support-to-dw_pcie_dis.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
