blacklist.conf: update blacklist

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1547,3 +1547,4 @@ c95c34f01bbda4421c25fdc9b04a4a4aab10d36c # xsk: Remove dangling function declara
 83810f84ecf11dfc5a9414a8b762c3501b328185 # may cause regression for charging from switched off laptops and bsc#1201691
 703f7066f40599c290babdb79dd61319264987e9 # breaks kABI for a cleanup
 60552253e29c8860ee5bf1e6064591b0917c0394 # allready there
+0b9f932edc1a461933bfde08e620362e2190e0dd # stmmac selftest
