Revert "Revert "tcp: change pingpong threshold to 3"" (eventlet tests fix).

--- a/series.conf
+++ b/series.conf
@@ -53,7 +53,6 @@
 	########################################################
 	# sorted patches
 	########################################################
-
 	# git://anongit.freedesktop.org/drm/drm-misc.git drm-misc-next
 	patches.suse/0001-drm-Always-warn-if-user-defined-modes-are-not-suppor.patch
 	patches.suse/0001-drm-client-Look-for-command-line-modes-first.patch
@@ -74,6 +73,7 @@
 	# to get into mainline any time soon (or ever) belong
 	# to area specific sections below.
 	########################################################
+	patches.suse/Revert-Revert-tcp-change-pingpong-threshold-to-3.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
