ALSA: bcd2000: Fix a UAF bug on the error path of probing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13139,6 +13139,7 @@
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
 	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/ALSA-usb-audio-Turn-off-manual-mode-on-Dell-dock.patch
+	patches.suse/ALSA-bcd2000-Fix-a-UAF-bug-on-the-error-path-of-prob.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
