ASoC: qcom: Fix missing of_node_put() in asoc_qcom_lpass_cpu_platform_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13150,6 +13150,7 @@
 	patches.suse/ASoC-samsung-h1940_uda1380-include-proepr-GPIO-consu.patch
 	patches.suse/ASoC-samsung-change-gpiod_speaker_power-and-rx1950_a.patch
 	patches.suse/ASoC-samsung-change-neo1973_audio-from-a-global-to-s.patch
+	patches.suse/ASoC-qcom-Fix-missing-of_node_put-in-asoc_qcom_lpass.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
