ASoC: codecs: da7210: add check for i2c_add_driver (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13144,6 +13144,7 @@
 	patches.suse/ASoC-samsung-Fix-error-handling-in-aries_audio_probe.patch
 	patches.suse/ASoC-imx-audmux-Silence-a-clang-warning.patch
 	patches.suse/ASoC-mt6797-mt6351-Fix-refcount-leak-in-mt6797_mt635.patch
+	patches.suse/ASoC-codecs-da7210-add-check-for-i2c_add_driver.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
