ASoC: audio-graph-card: Add of_node_put() in fail path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13154,6 +13154,7 @@
 	patches.suse/ASoC-imx-card-Fix-DSD-PDM-mclk-frequency.patch
 	patches.suse/ASoC-mt6359-Fix-refcount-leak-bug.patch
 	patches.suse/ASoC-qcom-q6dsp-Fix-an-off-by-one-in-q6adm_alloc_cop.patch
+	patches.suse/ASoC-audio-graph-card-Add-of_node_put-in-fail-path.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
