ASoC: codecs: wcd9335: move gains from SX_TLV to S8_TLV (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13146,6 +13146,7 @@
 	patches.suse/ASoC-mt6797-mt6351-Fix-refcount-leak-in-mt6797_mt635.patch
 	patches.suse/ASoC-codecs-da7210-add-check-for-i2c_add_driver.patch
 	patches.suse/ASoC-codecs-msm8916-wcd-digital-move-gains-from-SX_T.patch
+	patches.suse/ASoC-codecs-wcd9335-move-gains-from-SX_TLV-to-S8_TLV.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
