ARM: dts: uniphier: Fix USB interrupts for PXs2 SoC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13135,6 +13135,7 @@
 	patches.suse/scsi-qla2xxx-Update-manufacturer-details.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
+	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
