ALSA: usb-audio: Support jack detection on Dell dock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13137,6 +13137,7 @@
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
+	patches.suse/ALSA-usb-audio-Support-jack-detection-on-Dell-dock.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
