ASoC: mt6359: Fix refcount leak bug (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13152,6 +13152,7 @@
 	patches.suse/ASoC-samsung-change-neo1973_audio-from-a-global-to-s.patch
 	patches.suse/ASoC-qcom-Fix-missing-of_node_put-in-asoc_qcom_lpass.patch
 	patches.suse/ASoC-imx-card-Fix-DSD-PDM-mclk-frequency.patch
+	patches.suse/ASoC-mt6359-Fix-refcount-leak-bug.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
