mfd: max77620: Fix refcount leak in max77620_initialise_fps (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13174,6 +13174,7 @@
 	patches.suse/ASoC-imx-card-use-snd_pcm_format_t-type-for-asrc_for.patch
 	patches.suse/ASoC-mchp-spdifrx-disable-end-of-block-interrupt-on-.patch
 	patches.suse/mfd-t7l66xb-Drop-platform-disable-callback.patch
+	patches.suse/mfd-max77620-Fix-refcount-leak-in-max77620_initialis.patch
 	patches.suse/Revert-drivers-video-backlight-platform_lcd.c-add-su.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
